--- a/build.gradle
+++ b/build.gradle
@@ -29,4 +29,8 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	compile group: "com.twilio.sdk", name: "twilio", version: "7.27.0"
+    compile group: "com.sparkjava", name: "spark-core", version: "2.7.1"
+    compile group: "org.slf4j", name: "slf4j-simple", version: "1.7.21"
+    compile group: "javax.mail", name: "mail", version: "1.5.0-b01"
+
 }
